[package]
name = "ruparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version ="1.0.113", optional = true }
serde = {version = "*", features = ["derive"], default-features = false, optional = true}
cfg-if = "1.0.0"
smol_str = { version = "0.3.4", features = ["serde"] }
annotate-snippets = { version = "0.12.10", optional = true }


[features]
# The default feature set (in development)
default = ["serde", "std", "err-fmt"]
# Enable serde and serde_json support (in development)
serde = ["dep:serde", "dep:serde_json"]
# Enable error formating features - using `annotate-snippets` crate
err-fmt = ["dep:annotate-snippets"]
# Print debug information during parsing
debug = ["std"]

# Enable the use of the `std` library (in development)
std = []

[dev-dependencies]
annotate-snippets = { version = "0.12.10", features = ["testing-colors"] }
